gcc/testsuite/rust/rustc/ui/issues/issue-42755.rs
macro_rules! foo {
    ($($p:vis)*) => {} // { dg-error "" "" { target *-*-* } }
}

foo!(a);

fn main() {}

